# Rescuing_Drone_Swarm

./: .gitignore  Pipeline_Architecture.txt  README.md  TEST_CHECKLIST.md  dependencies  setup_env.bash  test_arm_takeoff.sh
init/: param.pks
scripts/: run_arm_takeoff_headless.sh  test_arm_takeoff.sh  test_exploration_cycle.py  test_rviz_topics.py  test_soak.py
src/aruco_detector/: CMakeLists.txt  package.xml  setup.py
src/aruco_detector/aruco_detector/: aruco_detector_node.py
src/aruco_detector/launch/: aruco_detector.launch.py
src/aruco_detector/scripts/: aruco_detector
src/drone_bringup/: CMakeLists.txt  package.xml
src/drone_bringup/config/: bridge.yaml  exploration_params.yaml  fastdds_localhost.xml  lio_sam_d1.yaml  lio_sam_d2.yaml  lio_sam_params.yaml
src/drone_bringup/launch/: arm_takeoff_test.launch.py  full_stack.launch.py  lio_sam_multi.launch.py  px4_multi.launch.py  simulation.launch.py
src/drone_bringup/models/aruco_marker/: model.config  model.sdf
src/drone_bringup/models/aruco_marker/materials/scripts/: aruco.material
src/drone_bringup/models/x500_vision_lidar/: SETUP.md  model.config  model.sdf  model.urdf.xacro
src/drone_bringup/rviz/: multi_drone.rviz
src/drone_bringup/scripts/: bootstrap_ekf2.py  gcs_heartbeat.py  generate_aruco_tags.py  launch_px4_instance.sh  lidar_enricher.py  save_arena_map.py
src/drone_bringup/worlds/: maze.sdf  test_aruco.sdf
src/drone_interfaces/: CMakeLists.txt  package.xml
src/drone_interfaces/msg/: ArucoDetection.msg  DroneState.msg  FrontierList.msg
src/drone_interfaces/srv/: AssignFrontier.srv  RegisterPOI.srv
src/drone_slam/: package.xml  setup.py
src/drone_slam/config/: lio_sam_drone.yaml
src/drone_slam/drone_slam/: __init__.py  imu_converter.py  pointcloud_adapter.py
src/drone_slam/launch/: slam_single_drone.launch.py
src/drone_slam/resource/: drone_slam
src/exploration_manager/: CMakeLists.txt  package.xml  setup.py
src/exploration_manager/exploration_manager/: drone_coordinator_node.py  exploration_planner_node.py  poi_manager_node.py
src/exploration_manager/launch/: exploration_manager.launch.py
src/exploration_manager/scripts/: drone_coordinator  exploration_planner  poi_manager
src/frontier_detector/: CMakeLists.txt  package.xml  setup.py
src/frontier_detector/frontier_detector/: __init__.py  frontier_detector_node.py
src/frontier_detector/launch/: frontier.launch.py
src/frontier_detector/scripts/: frontier_detector
src/octomap_pipeline/: package.xml  setup.py
src/octomap_pipeline/launch/: octomap.launch.py
src/octomap_pipeline/octomap_pipeline/: __init__.py
src/octomap_pipeline/params/: octomap_params.yaml
src/octomap_pipeline/resource/: octomap_pipeline
src/px4_offboard/: CMakeLists.txt  package.xml  setup.py
src/px4_offboard/launch/: px4_offboard.launch.py
src/px4_offboard/px4_offboard/: offboard_controller_node.py  visual_odom_bridge_node.py
src/px4_offboard/scripts/: offboard_controller  visual_odom_bridge
