<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_interfaces</name>
  <version>0.1.0</version>
  <description>Custom message and service definitions for multi-drone mapping</description>
  <maintainer email="you@todo.com">developer</maintainer>
  <license>MIT</license>

  <!-- Build system: ament_cmake is required for message generation.
       Even though your nodes might be Python, .msg/.srv files need CMake
       to invoke rosidl (ROS Interface Definition Language) code generators. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl is the toolchain that converts .msg/.srv files into
       language-specific code (Python classes, C++ structs).
       You need both the generator AND the runtime. -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- These are standard ROS2 message packages we reference in our .msg files.
       geometry_msgs provides PoseStamped, Point, etc.
       std_msgs provides Header (timestamp + frame_id). -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- This membership tag tells colcon that this package PROVIDES message types.
       Without it, other packages can't find our generated messages. -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
