<?xml version="1.0"?>
<package format="3">
  <name>drone_slam</name>
  <version>0.0.1</version>
  <description>Adapters and launchers for running LIO-SAM per drone namespace.</description>
  <maintainer email="telemaquebuzzi@gmail.com">telemaque</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
