<?xml version="1.0"?>
<package format="3">
  <name>frontier_detector</name>
  <version>0.1.0</version>
  <description>Simple frontier detector for 2D occupancy grids (publishes MarkerArray).</description>

  <maintainer email="telemaque@example.com">telemaque</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
