<?xml version="1.0"?>
<package format="3">
  <name>octomap_pipeline</name>
  <version>0.1.0</version>
  <description>Standalone launch wrapper for octomap_server with easy topic/param overrides.</description>

  <maintainer email="telemaque@example.com">telemaque</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>octomap_server</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
